--- a/Index.html
+++ b/Index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,10 +8,13 @@
     <title>Clock</title>
     <link rel="stylesheet" href="./Style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Ms+Madi&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ms+Madi&display=swap" rel="stylesheet">
+    <link rel="icon" href="https://tse1.mm.bing.net/th?id=OIP.b8bayNrIfp7vSZBCkdMEuAHaHh&pid=Api&P=0&w=149&h=152">
+    <link rel="stylesheet" href="./light.css">
 </head>
-<body>
+
+<body class="">
     <div class="text">
         <h1>Amazing</h1>
         <p>Working <span style="--clr:#00d000">Analog</span> & <span style="--clr:#ffff00">Digital</span> Clock</p>
@@ -21,7 +25,7 @@
             <div class="circle" id="sc" style="--clr : #04fc43">
                 <i></i>
             </div>
-            <div class="circle circle2"id="mn" style="--clr : #fee800">
+            <div class="circle circle2" id="mn" style="--clr : #fee800">
                 <i></i>
             </div>
             <div class="circle circle3" id="hr" style="--clr : #ff2972">
@@ -51,53 +55,63 @@
         </div>
 
     </div>
+    <button onclick="theme()" class="cbdy">  Dark / Light  <p class="button"></p>
+    </button>
+<script>
 
-    <script>
+        // 
+        function theme(){
+            let body = document.querySelector('body')
+            let bodyClass = body.classList.toggle('main')
+        }
+
+
         let hr = document.getElementById('hr')
         let mn = document.getElementById('mn')
         let sc = document.getElementById('sc')
 
-        setInterval(()=>{
+        setInterval(() => {
             let day = new Date()
-        let hh = day.getHours() * 30
-        let mm = day.getMinutes() * 6
-        let ss = day.getSeconds() * 6
+            let hh = day.getHours() * 30
+            let mm = day.getMinutes() * 6
+            let ss = day.getSeconds() * 6
 
-        hr.style.transform = `rotateZ(${hh+(mm/12)}deg)`
-        mn.style.transform = `rotateZ(${mm}deg)`
-        sc.style.transform = `rotateZ(${ss}deg)`
+            hr.style.transform = `rotateZ(${hh + (mm / 12)}deg)`
+            mn.style.transform = `rotateZ(${mm}deg)`
+            sc.style.transform = `rotateZ(${ss}deg)`
 
-        // 
-        // 
-        let hours = document.getElementById('hour')
-        let minutes = document.getElementById('minutes')
-        let seconds = document.getElementById('second')
-        let ampm = document.getElementById('ampm')
+            // 
+            // 
+            let hours = document.getElementById('hour')
+            let minutes = document.getElementById('minutes')
+            let seconds = document.getElementById('second')
+            let ampm = document.getElementById('ampm')
 
 
-        let h = new Date().getHours()
-        let m = new Date().getMinutes()
-        let s = new Date().getSeconds()
+            let h = new Date().getHours()
+            let m = new Date().getMinutes()
+            let s = new Date().getSeconds()
 
-        let am = h >= 12 ? "PM" : "AM"
-        // convert 24hr clock to 12hr
+            let am = h >= 12 ? "PM" : "AM"
+            // convert 24hr clock to 12hr
 
-        if(h>12){
-            h = h -12
-        }
+            if (h > 12) {
+                h = h - 12
+            }
 
-        // add zero before single digit number
+            // add zero before single digit number
 
-        h = (h<10)?"0" + h : h
-        m = (m<10)?"0" + m : m
-        s = (s<10)?"0" + s : s
+            h = (h < 10) ? "0" + h : h
+            m = (m < 10) ? "0" + m : m
+            s = (s < 10) ? "0" + s : s
 
-        hours.innerHTML = h
-        minutes.innerHTML = m
-        seconds.innerHTML = s
-        ampm.innerHTML = am
-    })
+            hours.innerHTML = h
+            minutes.innerHTML = m
+            seconds.innerHTML = s
+            ampm.innerHTML = am
+        })
 
     </script>
 </body>
+
 </html>
